--- a/.github/workflows/build-dot-net.yaml
+++ b/.github/workflows/build-dot-net.yaml
@@ -6,10 +6,16 @@ on:
       project-name:
         required: true
         type: string
+      dotnet-version:
+        required: false
+        type: string
+        default: '9.0.x'
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    continue-on-error: false
 
     steps:
       - uses: actions/checkout@v4
@@ -17,7 +23,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.x'
+          dotnet-version: ${{ inputs.dotnet-version }}
 
       - name: Restore dependencies
         run: dotnet restore ${{ inputs.project-name }}
@@ -26,4 +32,10 @@ jobs:
         run: dotnet build ${{ inputs.project-name }} --no-restore
 
       - name: Run Tests
-        run: dotnet test ${{ inputs.project-name }} --no-build --verbosity normal
+        run: dotnet test ${{ inputs.project-name }} --no-build --verbosity normal --logger "trx;LogFileName=test_results.trx"
+
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: '**/TestResults/*.trx'
