--- a/.github/workflows/dotnet-build.yaml
+++ b/.github/workflows/dotnet-build.yaml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup .NET
+      - name: Setup .NET, Check the version, Restore, Build and Test
         uses: VKalenski/GitHub-Actions-Templates/.github/actions/dotnet-version@main
         with:
           project-name: ${{ inputs.project-name }}
