--- a/.github/workflows/dotnet-build.yaml
+++ b/.github/workflows/dotnet-build.yaml
@@ -12,11 +12,15 @@ on:
         type: string
         default: '9.0.x'
 
+env:
+  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     continue-on-error: false
+
 
     steps:
       - uses: actions/checkout@v4
@@ -26,3 +30,16 @@ jobs:
         with:
           project-name: ${{ inputs.project-name }}
           dotnet-version: ${{ inputs.dotnet-version }}
+
+  notify:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notify Slack on success
+        if: success()
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Build completed successfully!"}' ${{ env.SLACK_WEBHOOK_URL }}
+
+      - name: Notify Slack on failure
+        if: failure()
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Build failed! Please check the logs."}' ${{ env.SLACK_WEBHOOK_URL }}
