--- a/.github/workflows/dotnet-build.yaml
+++ b/.github/workflows/dotnet-build.yaml
@@ -21,25 +21,12 @@ jobs:
     timeout-minutes: 10
     continue-on-error: false
 
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Setup .NET, Check the version, Restore, Build and Test
         uses: VKalenski/GitHub-Actions-Templates/.github/actions/dotnet-version@main
         with:
           project-name: ${{ inputs.project-name }}
           dotnet-version: ${{ inputs.dotnet-version }}
-
-  notify:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Notify Slack on success
-        if: success()
-        run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"Build completed successfully!"}' ${{ env.SLACK_WEBHOOK_URL }}
-
-      - name: Notify Slack on failure
-        if: failure()
-        run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"Build failed! Please check the logs."}' ${{ env.SLACK_WEBHOOK_URL }}
