--- a/.github/workflows/copy-replace.yaml
+++ b/.github/workflows/copy-replace.yaml
@@ -61,8 +61,8 @@ jobs:
 
       - name: Commit changes to repository
         run: |
-          git config user.name "VKalenski"
-          git config user.email "vilislavkalenski@gmail.com"
+          git config user.name "GitHub Actions"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -am "Update deps"
           git push origin main
