--- a/.github/workflows/copy-replace.yaml
+++ b/.github/workflows/copy-replace.yaml
@@ -53,7 +53,7 @@ jobs:
             echo "Destination folder does not exist, proceeding with copying."
           fi
 
-      - name: Copy selected sub-folder
+      - name: Copy selected sub-folder with a new name
         run: |
           echo "Copying from ${{ inputs.source-folder }}/${{ inputs.sub-folder }} to ${{ inputs.destination-folder }}/${{ inputs.destination-sub-folder }}"
           mkdir -p "${{ inputs.destination-folder }}/${{ inputs.destination-sub-folder }}"
@@ -65,8 +65,6 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -am "Update deps"
-          # Create a new branch for the changes
-          BRANCH_NAME="vkalenski/test"
-          git checkout -b $BRANCH_NAME
-          # Push the changes using GITHUB_TOKEN for authentication
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} $BRANCH_NAME
+          # Push the changes directly to the main branch using GITHUB_TOKEN for authentication
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} main
+
