--- a/.github/workflows/minikube-deploy.yaml
+++ b/.github/workflows/minikube-deploy.yaml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Start Minikube
       run: |
-        sudo minikube start --driver=docker
+        minikube start --driver=docker
         minikube status
 
     - name: Create Namespace
