Edit base k8s files and edit the minikube workflow

--- a/.github/workflows/minikube-deploy.yaml
+++ b/.github/workflows/minikube-deploy.yaml
@@ -1,8 +1,8 @@
 name: Install Minikube, Deploy App with Namespace, and Teardown
 
 on:
-  push:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -41,8 +41,11 @@ jobs:
 
     - name: Apply Kubernetes Manifests
       run: |
-        kubectl apply -f k8s/deployment.yaml
-        kubectl apply -f k8s/service.yaml
+        kubectl apply -f k8s/base-resources/namespace.yaml
+        kubectl apply -f k8s/base-resources/deployment.yaml
+        kubectl apply -f k8s/base-resources/service.yaml
+        kubectl apply -f k8s/base-resources/ingress.yaml
+        kubectl apply -f k8s/base-resources/storageclass.yaml
 
     - name: Wait for Deployment to be Ready
       run: |
