--- a/k8s/base-resources/service.yaml
+++ b/k8s/base-resources/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-minikube-service
-  namespace: demo
+  namespace: test
 spec:
   selector:
     app: hello-minikube
@@ -10,3 +10,4 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
+      nodePort: 30080
