Edit the minikube workflow and k8s base files

--- a/k8s/base-resources/deployment.yaml
+++ b/k8s/base-resources/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-minikube-deployment
-  namespace: test
+  # namespace: test
   labels:
     app: hello-minikube
     tier: backend
