--- a/k8s/base-resources/ingress.yaml
+++ b/k8s/base-resources/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: hello-minikube-ingress
-  namespace: test
+  # namespace: test
 spec:
   rules:
   - host: hello-minikube.local
