--- a/k8s/base-resources/service.yaml
+++ b/k8s/base-resources/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-minikube-service
-  namespace: test
+  # namespace: test
 spec:
   selector:
     app: hello-minikube
