--- a/.github/workflows/minikube-deploy.yaml
+++ b/.github/workflows/minikube-deploy.yaml
@@ -28,6 +28,7 @@ jobs:
       run: |
         curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
         sudo install minikube-linux-amd64 /usr/local/bin/minikube
+        rm -f minikube-linux-amd64
         minikube version
 
     - name: Start Minikube
@@ -39,6 +40,10 @@ jobs:
       run: |
         kubectl apply -f k8s/base-resources/namespace.yaml
 
+    - name: Enable Ingress Controller
+      run: |
+        minikube addons enable ingress
+
     - name: Apply Kubernetes Manifests
       run: |
         kubectl apply -f k8s/base-resources/deployment.yaml
@@ -48,7 +53,7 @@ jobs:
 
     - name: Wait for Deployment to be Ready
       run: |
-        kubectl rollout status deployment/hello-minikube -n test --timeout=120s
+        kubectl rollout status deployment/hello-minikube-deployment -n test --timeout=120s
 
     - name: Port-forward and test
       run: |
