Edit the aws workflow

--- a/.github/workflows/aws-clean.yaml
+++ b/.github/workflows/aws-clean.yaml
@@ -31,20 +31,11 @@ jobs:
     - name: Run EC2 Cleanup Script and log output
       run: |
         mkdir -p logs
-        python ./python/aws/cleanup_aws_ec2_safe.py > logs/cleanup_log.txt
-        cat logs/cleanup_log.txt
+        python ./python/aws/cleanup_aws_ec2_safe.py > logs/ec2-cleanup-ec2-log.txt
+        cat logs/ec2-cleanup-ec2-log.txt
 
-    - name: Create GitHub Release and upload logs
-      run: |
-        RELEASE_NAME="EC2 Cleanup $(date +'%Y-%m-%d %H:%M:%S')"
-        BODY="This release contains the logs of the EC2 cleanup process."
-
-        # Create release on GitHub using API
-        curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-        -d '{"tag_name": "cleanup-$(date +%Y%m%d%H%M%S)", "name": "'"$RELEASE_NAME"'", "body": "'"$BODY"'"}' \
-        https://api.github.com/repos/${{ github.repository }}/releases
-
-        # Upload the log file to the release
-        curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-        -F "file=@logs/cleanup_log.txt" \
-        https://uploads.github.com/repos/${{ github.repository }}/releases/<RELEASE_ID>/assets?name=cleanup_log.txt
+    - name: Upload cleanup logs as an artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: ec2-cleanup-ec2-log
+        path: logs/ec2-cleanup-ec2-log.txt
