--- a/.github/workflows/aws-clean.yaml
+++ b/.github/workflows/aws-clean.yaml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.8'
 
     - name: Install dependencies
       run: |
@@ -31,11 +31,11 @@ jobs:
     - name: Run EC2 Cleanup Script and log output
       run: |
         mkdir -p logs
-        python ./python/aws/cleanup_aws_ec2_safe.py > logs/ec2-cleanup-ec2-log.txt
-        cat logs/ec2-cleanup-ec2-log.txt
+        python ./python/aws/cleanup_aws_ec2_safe.py > logs/cleanup_log.txt
+        cat logs/cleanup_log.txt
 
     - name: Upload cleanup logs as an artifact
       uses: actions/upload-artifact@v2
       with:
-        name: ec2-cleanup-ec2-log
-        path: logs/ec2-cleanup-ec2-log.txt
+        name: ec2-cleanup-log
+        path: logs/cleanup_log.txt
