--- a/.github/workflows/aws-clean.yaml
+++ b/.github/workflows/aws-clean.yaml
@@ -31,11 +31,11 @@ jobs:
     - name: Run EC2 Cleanup Script and log output
       run: |
         mkdir -p logs
-        python ./python/aws/cleanup_aws_ec2_safe.py > logs/cleanup_log.txt
-        cat logs/cleanup_log.txt
+        python ./python/aws/cleanup_aws_ec2_safe.py >> logs/cleanup_log.txt
+        echo "LOG_FILE_PATH=logs/cleanup_log.txt" >> $GITHUB_ENV  # Store log file path in environment variable
 
     - name: Upload cleanup logs as an artifact
       uses: actions/upload-artifact@v4
       with:
         name: ec2-cleanup-log
-        path: logs/cleanup_log.txt
+        path: ${{ env.LOG_FILE_PATH }}
