--- a/.github/workflows/aws-linux-setup.yaml
+++ b/.github/workflows/aws-linux-setup.yaml
@@ -125,9 +125,8 @@ jobs:
           apt-cache policy docker-ce
           sudo apt-get install -y docker-ce
           sudo systemctl status docker
-          sudo usermod -aG docker $(whoami) # Add user to docker group
-          echo "Docker installed. Restarting runner to apply changes..."
-          sudo systemctl restart actions.runner.*
+          # sudo usermod -aG docker ${USER}
+          sudo usermod -aG docker $(whoami)
           echo
 
       - name: Pull MSSQL image and start the container
