--- a/.github/actions/aws-credentials/action.yaml
+++ b/.github/actions/aws-credentials/action.yaml
@@ -2,6 +2,12 @@ name: Configure AWS Credentials
 description: Sets up AWS CLI with credentials from secrets
 
 inputs:
+  aws-access-key-id:
+    description: AWS access key
+    required: true
+  aws-secret-access-key:
+    description: AWS secret key
+    required: true
   region:
     description: AWS region
     required: true
@@ -12,6 +18,6 @@ runs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ${{ inputs.aws-access-key-id }}
+        aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
         aws-region: ${{ inputs.region }}
