--- a/.github/workflows/aws-stop-ec2.yaml
+++ b/.github/workflows/aws-stop-ec2.yaml
@@ -18,7 +18,7 @@ jobs:
           echo "🌍 Timezone: $(date +'%Z')"
 
       - name: 🔑 Set up AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: VKalenski/GitHub-Actions-Templates/.github/actions/aws-login@main
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
