--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -22,12 +22,12 @@ jobs:
         with:
           terraform_version: 1.7.5
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - name: 🔑 Set up AWS credentials
+        uses: VKalenski/GitHub-Actions-Templates/.github/actions/aws-login@main
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ inputs.aws_region }}
+          aws-region: 'eu-west-3'
 
       - name: Verify AWS Credentials
         run: |
