--- a/.github/actions/tag-version/action.yaml
+++ b/.github/actions/tag-version/action.yaml
@@ -1,11 +1,12 @@
 name: 'Auto-increment Git tag'
+
 description: 'Finds the latest Git tag, increments patch, and creates a new tag'
 
 runs:
   using: 'composite'
   steps:
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # releases v5.0.0
 
     - name: Get latest tag and bump
       id: bump
