--- a/.github/actions/aws-login/action.yaml
+++ b/.github/actions/aws-login/action.yaml
@@ -1,5 +1,7 @@
 name: 'Setup AWS Credentials'
+
 description: 'Configure AWS credentials from GitHub secrets'
+
 inputs:
   aws-access-key-id:
     description: "xxx"
@@ -15,7 +17,7 @@ runs:
   using: "composite"
   steps:
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
+      uses: aws-actions/configure-aws-credentials@00943011d9042930efac3dcd3a170e4273319bc8 # releases v5.1.0
       with:
         aws-access-key-id: ${{ inputs.aws-access-key-id }}
         aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
