--- a/.github/actions/dotnet-docker/action.yaml
+++ b/.github/actions/dotnet-docker/action.yaml
@@ -1,4 +1,5 @@
 name: 'Docker Build and Push'
+
 description: 'Builds and pushes a Docker image to Docker Hub'
 
 inputs:
@@ -26,10 +27,10 @@ runs:
   using: "composite"
   steps:
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # releases v3.11.1
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v3
+      uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # releases v3.6.0
       with:
         username: ${{ inputs.docker-username }}
         password: ${{ inputs.docker-password }}
